-*-change-log-*-

2.2.0.0 (current development version)
	* Remove unused '--allow-newer'/'--allow-older' support (#4527)
	* TODO

2.0.0.0 Ryan Thomas <ryan@ryant.org> May 2017
	* The 2.0 migration guide gives advice on adapting Custom setup
	scripts to backwards-incompatible changes in this release:
	https://github.com/haskell/cabal/wiki/2.0-migration-guide
	* Add CURRENT_PACKAGE_VERSION to cabal_macros.h (#4319)
	* Dropped support for versions of GHC earlier than 6.12 (#3111).
	* GHC compatibility window for the Cabal library has been extended
	  to five years (#3838).
	* Convenience/internal libraries are now supported (#269).
	  An internal library is declared using the stanza "library
	  'libname'".  Packages which use internal libraries can
	  result in multiple registrations; thus '--gen-pkg-config'
	  can now output a directory of registration scripts rather than
	  a single file.
	* Backwards incompatible change to preprocessor interface:
	  the function in 'PPSuffixHandler' now takes an additional
	  'ComponentLocalBuildInfo' specifying the build information
	  of the component being preprocessed.
	* Backwards incompatible change to 'cabal_macros.h' (#1893): we now
	  generate a macro file for each component which contains only
	  information about the direct dependencies of that component.
	  Consequently, 'dist/build/autogen/cabal_macros.h' contains
	  only the macros for the library, and is not generated if a
	  package has no library; to find the macros for an executable
	  named 'foobar', look in 'dist/build/foobar/autogen/cabal_macros.h'.
	  Similarly, if you used 'autogenModulesDir' you should now
	  use 'autogenComponentModulesDir', which now requires a
	  'ComponentLocalBuildInfo' argument as well in order to
	  disambiguate which component the autogenerated files are for.
	* Backwards incompatible change to 'Component': 'TestSuite' and
	  'Benchmark' no longer have 'testEnabled' and
	  'benchmarkEnabled'.  If you used