@@ -15,6 +15,7 @@ On executable 'Exe' an 'autogen-module' is not on 'other-modules'
 On test suite 'Test' an 'autogen-module' is not on 'other-modules'
 On benchmark 'Bench' an 'autogen-module' is not on 'other-modules'
 Packages using 'cabal-version: >= 1.25' and the autogenerated module Paths_* must include it also on the 'autogen-modules' field besides 'exposed-modules' and 'other-modules'. This specifies that the module does not come with the package and is generated on setup. Modules built with a custom Setup.hs script also go here to ensure that commands like sdist don't fail.
+The filename ./my.cabal does not match package name (expected: AutogenModules.cabal)
 Note: the public hackage server would reject this package.
 Warning: Cannot run preprocessors. Run 'configure' command first.
 Building source dist for AutogenModules-0.1...
